# markus

./: .flake8  README.md  pyproject.toml
src/markus_pettersen/: azure.py  general.py  pd.py  sql.py
utils/: general.py  pd.py
