
[tool.poetry]
name = "markus-pettersen"
version = "0.1.1"
description = "Random useful python stuff I sometimes use"
authors = ["Markus Pettersen <mp.markus94@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/MPettersen/markus"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
psycopg = "^3.1.4"
psycopg-binary = "^3.1.4"
psycopg-pool = "^3.1.4"
azure-identity = "^1.12.0"
azure-keyvault-secrets = "^4.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
