
[tool.poetry]
name = "markus-pettersen"
version = "0.1.2"
description = "Random useful python stuff I sometimes use"
authors = ["Markus Pettersen <mp.markus94@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/MPettersen/utils"
license = "MIT"

[tool.poetry.dependencies]
python = "*"
pandas = "*"
psycopg = "*"
psycopg-binary = "*"
psycopg-pool = "*"
azure-identity = "*"
azure-keyvault-secrets = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
